fix issue with logos overflowing their containers at some browser zoom levels (ACHYDRA-802)

--- a/app/assets/stylesheets/partials/menu.scss
+++ b/app/assets/stylesheets/partials/menu.scss
@@ -26,6 +26,7 @@
     border-radius: 6px;
     margin-bottom: 7px;
     max-height: 70px;
+    max-width: 100%;
   }
 
   & h2 {
